--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,8 +12,19 @@ h2 {
     font-weight: ;
 }
 
-#controls-container {
+h3 {
+    text-align: center;
+    color: ;
+    font-size: ;
+    font-weight: ;
+}
 
+button {
+
+}
+
+#controls-container {
+    text-align: center;
 }
 
 #map-container {
