added locations search bar. need to get that working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
 <div id="controls-container">
   <h3>Latitude: {{ lat }}</h3>
   <h3>Longtitude: {{ long }}</h3>
-  <button type="button">Get Location</button>
+  <button type="button">Get Current Location</button>
+  <div id="search-container">
+    <label>Search Places</label>
+    <input type="text" placeholder="Search" autocorrect="off" autocapitalize="off" spellcheck="off" #search [formControl]="searchControl">    
+  </div>
 </div>
 <div id="map-container">
   <agm-map id="map" [latitude]="lat" [longitude]="long" [zoom]="zoom">
