--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -50,7 +50,7 @@ h2 {
     padding-bottom: .75rem;
     padding-right: 3rem;
     padding-left: 3rem;
-    margin-top: .75rem;
+    margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
 
